--- a/src/main/webapp/WEB-INF/templates/fragments/mycoupangLeftMenu.html
+++ b/src/main/webapp/WEB-INF/templates/fragments/mycoupangLeftMenu.html
@@ -8,7 +8,7 @@
             </div>
             <div class="mycoupang-wrapper__left-menu__group1 left-group">
                 <div class="title">My 쇼핑</div>
-                <div>주문목록/배송조회</div>
+                <div><a href="/mycoupang">주문목록/배송조회</a></div>
                 <div>취소/반품/교환/환불내역</div>
                 <div>로켓와우 멤버십 관리</div>
                 <div>정기배송관리</div>
@@ -47,7 +47,7 @@
         <div class="mycoupang-wrapper__content">
             <div class="mycoupang-wrapper__content__top">
                 <div class="vertical-menu"><span>미사용티켓</span><span class="count-paper">0</span></div>
-                <div class="vertical-menu"><span>배송중</span><span class="count-any">0</span></div>
+                <div class="vertical-menu"><span>배송중</span><span class="count-any js-delivery-status">0</span></div>
                 <div class="vertical-menu"><span>할인쿠폰</span><span class="count-paper">0</span></div>
                 <div class="horizontal-menus">
                     <div class="horizontal-menu"><span>쿠페이 머니</span><span class="js-price">0</span></div>
