--- a/src/main/webapp/static/asset/css/styles.css
+++ b/src/main/webapp/static/asset/css/styles.css
@@ -8,6 +8,7 @@
 @import "component/font.css";
 @import "component/button.css";
 @import "component/price_quantity.css";
+@import "component/mycoupang/deliveryShow.css";
 
 /* import page css */
 @import "pages/main.css";
