Cookie read/write bug fix

--- a/src/main/webapp/WEB-INF/templates/cart/show.html
+++ b/src/main/webapp/WEB-INF/templates/cart/show.html
@@ -107,6 +107,11 @@
                     주문금액&nbsp<strong class="summary__total-cost js-price">0</strong>
                 </div>
             </div>
+
+            <div class="cart-wrapper__remover">
+                <input class="white-button js-delete" type="button" value="선택 삭제"/>
+            </div>
+
             <div class="cart-grand-summary">
                 총 상품가격 <span class="emphasize grand-item-cost js-price">33000</span>
                 <span class="square-plus" aria-placeholder="더하기"></span>
