--- a/src/main/webapp/WEB-INF/templates/fragments/mycoupangLeftMenu.html
+++ b/src/main/webapp/WEB-INF/templates/fragments/mycoupangLeftMenu.html
@@ -9,7 +9,7 @@
             <div class="mycoupang-wrapper__left-menu__group1 left-group">
                 <div class="title">My 쇼핑</div>
                 <div><a href="/mycoupang">주문목록/배송조회</a></div>
-                <div>취소/반품/교환/환불내역</div>
+                <div><a href="/mycoupang/cancel">취소/반품/교환/환불내역</a></div>
                 <div>로켓와우 멤버십 관리</div>
                 <div>정기배송관리</div>
                 <div>영수증 조회/출력</div>
