--- a/src/main/webapp/WEB-INF/templates/product/detail.html
+++ b/src/main/webapp/WEB-INF/templates/product/detail.html
@@ -61,6 +61,136 @@
             <div class="product-detail-content__spreader">상품정보 더보기</div>
             <img th:src="'../'+${product.description}" alt="description"/>
         </div>
+        <hr>
+        <div class="product-detail-comment">
+            <button class="blue-button">상품평 쓰기</button>
+            <h3>상품평</h3>
+        </div>
+        <div class="product-detail-ask">
+            <button class="white-button">문의하기</button>
+            <h3>상품문의</h3>
+            <ul>
+                <li>
+                    구매한 상품의 <strong>취소/반품은 마이쿠팡 구매내역에서 신청</strong> 가능합니다.
+                </li>
+                <li>
+                    상품문의 및 후기게시판을 통해 취소나 환불, 반품 등은 처리되지 않습니다.
+                </li>
+                <li>
+                    <strong>가격, 판매자, 교환/환불 및 배송 등 해당 상품 자체와 관련 없는 문의는 고객센터 내 1:1 문의하기</strong>를 이용해주세요.
+                </li>
+                <li>
+                    <strong>"해당 상품 자체"와 관계없는 글, 양도, 광고성, 욕설, 비방, 도배 등의 글은 예고 없이 이동, 노출제한, 삭제 등의 조치가 취해질 수 있습니다.</strong>
+                </li>
+                <li>
+                    공개 게시판이므로 전화번호, 메일 주소 등 고객님의 소중한 개인정보는 절대 남기지 말아주세요.
+                </li>
+            </ul>
+            <div class="product-detail-ask__content"></div>
+        </div>
+        <div class="product-detail-info">
+            <div class="delivery-info">
+                <h3>배송정보</h3>
+                <div class="delivery-info__detail">
+                    <span>
+                        배송방법
+                    </span>
+                    <span>
+                        순차배송
+                    </span>
+                    <span>
+                        묶음배송 여부
+                    </span>
+                    <span>
+                        가능
+                    </span>
+                    <span>
+                        배송비
+                    </span>
+                    <span>
+                        무료배송
+                        - 로켓배송 상품 중 19,800원 이상 구매 시 무료배송
+                        - 도서산간 지역 추가비용 없음
+                    </span>
+                    <span>
+                        배송기간
+                    </span>
+                    <span>
+                        ㆍ쿠팡맨 배송 지역 : 주문 및 결제 완료 후, 1-2일 이내 도착
+                        ㆍ쿠팡맨 미배송 지역 : 주문 및 결제 완료 후, 2-3일 이내 도착
+                        - 도서 산간 지역 등은 하루가 더 소요될 수 있습니다. 곧 고객님께도 쿠팡맨이 찾아갈 수 있도록 노력하겠습니다
+                        ㆍ천재지변, 물량 수급 변동 등 예외적인 사유 발생 시, 다소 지연될 수 있는 점 양해 부탁드립니다.
+                    </span>
+                </div>
+            </div>
+            <div class="refund-info">
+                <h3>교환/반품 안내</h3>
+                <div class="refund-info__detail">
+                    <span>
+                        교환/반품 비용
+                    </span>
+                    <span>
+                        5,000원
+                        - 단, 고객 변심의 경우에만 발생
+                        - 부분반품 시, 남은금액이 무료배송 조건을 유지하면 일부 반품비용이 부과
+                    </span>
+                    <span>
+                        교환/반품 신청 기준일
+                    </span>
+                    <span>
+                        ㆍ단순변심에 의한 로켓배송 상품의 교환/반품은 제품 수령 후 30일 이내까지만 가능 (교환/반품비용 고객부담)
+                        ㆍ상품의 내용이 표시·광고의 내용과 다른 경우에는 상품을 수령한 날부터 3개월 이내, 그 사실을 안 날 또는 알 수 있었던 날부터
+                        30일 이내에 청약철회 가능
+                    </span>
+                </div>
+            </div>
+            <div class="refund-restriction">
+                <h3>교환/반품 제한사항</h3>
+                ㆍ주문/제작 상품의 경우, 상품의 제작이 이미 진행된 경우
+                ㆍ상품 포장을 개봉하여 사용 또는 설치 완료되어 상품의 가치가 훼손된 경우 (단, 내용 확인을 위한 포장 개봉의 경우는 예외)
+                ㆍ고객의 사용, 시간경과, 일부 소비에 의하여 상품의 가치가 현저히 감소한 경우
+                ㆍ세트상품 일부 사용, 구성품을 분실하였거나 취급 부주의로 인한 파손/고장/오염으로 재판매 불가한 경우
+                ㆍ모니터 해상도의 차이로 인해 색상이나 이미지가 실제와 달라, 고객이 단순 변심으로 교환/반품을 무료로 요청하는 경우
+                ㆍ제조사의 사정 (신모델 출시 등) 및 부품 가격 변동 등에 의해 무료 교환/반품으로 요청하는 경우
+                ※ 각 상품별로 아래와 같은 사유로 취소/반품이 제한 될 수 있습니다.
+                <div class="refund-restriction__detail">
+                    <span>
+                        의류/잡화/수입명품
+                    </span>
+                    <span>
+                        ㆍ상품의 택(TAG) 제거, 라벨 및 상품 훼손, 구성품 누락으로 상품의 가치가 현저히 감소된 경우
+                    </span>
+                    <span>
+                        계절상품/식품/화장품
+                    </span>
+                    <span>
+                        ㆍ신선냉동 식품의 단순변심의 경우
+                        ㆍ뷰티 상품 이용 시 트러블(알러지, 붉은 반점, 가려움, 따가움)이 발생하는 경우,
+                        진료 확인서 및 소견서 등을 증빙하면 환불이 가능 (제반비용 고객부담)
+                    </span>
+                    <span>
+                        전자/가전/설치상품
+                    </span>
+                    <span>
+                        ㆍ설치 또는 사용하여 재판매가 어려운 경우, 액정이 있는 상품의 전원을 켠 경우
+                        ㆍ상품의 시리얼 넘버 유출로 내장된 소프트웨어의 가치가 감소한 경우 (내비게이션, OS시리얼이 적힌 PMP)
+                        ㆍ홀로그램 등을 분리, 분실, 훼손하여 상품의 가치가 현저히 감소하여 재판매가 불가할 경우 (노트북, 데스크탑 PC 등)
+                    </span>
+                    <span>
+                        자동차용품
+                    </span>
+                    <span>
+                        ㆍ상품을 개봉하여 장착한 이후 단순변심인 경우
+                    </span>
+                    <span>
+                        CD/DVD/GAME/BOOK
+                    </span>
+                    <span>
+                    	ㆍ복제가 가능한 상품의 포장 등을 훼손한 경우
+                    </span>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div th:replace="fragments/footer :: footer" />
