회원정보수정 page

--- a/src/main/webapp/WEB-INF/templates/address/list.html
+++ b/src/main/webapp/WEB-INF/templates/address/list.html
@@ -8,6 +8,7 @@
 <body>
     <div th:replace="fragments/searchHeader :: searchHeader" />
     <div th:replace="fragments/mycoupangLeftMenu :: mycoupangLeftMenu" />
+    <div th:replace="fragments/mycoupangTopMenu :: mycoupangTopMenu" />
 
     <!------------------------- 컨텐츠 시작 ------------------------->
     <div class="main-wrapper">
