--- a/src/main/webapp/WEB-INF/templates/fragments/mycoupangLeftMenu.html
+++ b/src/main/webapp/WEB-INF/templates/fragments/mycoupangLeftMenu.html
@@ -23,12 +23,12 @@
                 <div class="title">My 활동</div>
                 <div>문의하기</div>
                 <div>문의내역 확인</div>
-                <div>구매후기</div>
+                <div><a href="/productreview/reviewable">구매후기</a></div>
                 <div>찜 리스트</div>
             </div>
             <div class="mycoupang-wrapper__left-menu__group4 left-group">
                 <div class="title">My 정보</div>
-                <div>개인정보확인/수정</div>
+                <div><a href="/mycoupang/userModify">개인정보확인/수정</a></div>
                 <div>결제수단·쿠페이 관리</div>
                 <div><a href="/address/list">배송지 관리</a></div>
             </div>
@@ -43,18 +43,6 @@
                     <div class="cancel-and-refund" alt="취소/반품안내"></div>
                 </a>
             </div>
-        </div>
-        <div class="mycoupang-wrapper__content">
-            <div class="mycoupang-wrapper__content__top">
-                <div class="vertical-menu"><span>미사용티켓</span><span class="count-paper">0</span></div>
-                <div class="vertical-menu"><span>배송중</span><span class="count-any js-delivery-status">0</span></div>
-                <div class="vertical-menu"><span>할인쿠폰</span><span class="count-paper">0</span></div>
-                <div class="horizontal-menus">
-                    <div class="horizontal-menu"><span>쿠페이 머니</span><span class="js-price">0</span></div>
-                    <div class="horizontal-menu"><span>쿠팡캐시</span><span class="js-price">0</span></div>
-                </div>
-            </div>
-
         </div>
     </div>
 </div>
