--- a/src/main/webapp/WEB-INF/templates/fragments/searchHeader.html
+++ b/src/main/webapp/WEB-INF/templates/fragments/searchHeader.html
@@ -15,7 +15,7 @@
             <div>고객센터</div>
         </div>
     </nav>
-    <div class="main-wrapper">
+    <div class="main-wrapper header">
         <header>
             <div class="category-bar">
                 <div class="menu-icon" alt="menu-icon"></div>
