--- a/src/main/webapp/static/asset/css/pages/product/detail.css
+++ b/src/main/webapp/static/asset/css/pages/product/detail.css
@@ -1,16 +1,34 @@
 .product-detail-header {
-    border-top: 1px solid rgba(0,0,0,.2);
     display: flex;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+.product-detail-header__thumbnail {
+    width: 5rem;
+    padding: 0 0.5rem;
+    height: 4rem;
+    overflow: hidden;
+    margin-left: 1rem;
+    margin: 0 auto;
+}
+.product-detail-header__thumbnail > div {
+    width: 100%;
+    height: 100%;
+    border: 2px solid #0074e9;
+}
+.product-detail-header__thumbnail > div > img {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 .product-detail-header__pic {
-    width: 50%;
-    padding: 1%;
+    width: calc(50% - 5rem);
     overflow: hidden;
 }
 .product-detail-header__pic div{
-    margin-left: auto;
-    width: 400px;
-    height: 400px;
+    margin-left: 1rem;
+    width: 450px;
+    height: 450px;
     overflow: hidden;
 }
 .product-detail-header__pic div img{
@@ -20,7 +38,7 @@
 }
 .product-detail-header__infos {
     width: 50%;
-    padding: 3% 1%;
+    padding: 1%;
 }
 .product-detail-header__infos__producer {
     color: var(--blue);
@@ -141,10 +159,13 @@
     object-fit: cover;
     object-position: top;
 }
+.auto-height {
+    height: auto;
+}
 .product-detail-header__pic .magnified-product {
     position: absolute;
-    top: 10rem;
-    left: 50%;
+    top: 10.2rem;
+    left: calc(50% - 1rem);
 }
 .product-detail-header__pic .magnified-product img{
     width: 800px;
@@ -166,7 +187,7 @@
     text-align: center;
     line-height: 50px;
     margin: 0 auto;
-    top: 400px;
+    bottom: 50px;
     position: absolute;
     left: calc(50% - 100px);
     font-weight: 600;
@@ -188,12 +209,96 @@
     padding: 2rem;
     border: 1px solid rgba(0,0,0,0.4);
 }
-
 .product-detail-ask .white-button {
     float: right;
     margin-top: 1rem;
     padding: 0.5rem 1rem;
 }
+/*---------------- 상품문의 미니 페이지 시작----------------*/
+.close-pop {
+    cursor: pointer;
+}
+.shadow-setter {
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    left: 0;
+    position: fixed;
+    background: rgba(0,0,0,0.5);
+    z-index: 1;
+}
+.ask-product-page {
+    position: fixed;
+    top: 21%;
+    z-index: 1;
+    background: lightgray;
+    width: 40%;
+    left: 30%;
+    top: 17%;
+    background: white;
+    border: 1px solid black;
+}
+.ask-product-page header {
+    padding: 1.5rem;
+    margin-bottom: 0;
+    background: #eeeeee;
+    margin-bottom: 2rem;
+    display: flex;
+    justify-content: space-between;
+}
+.ask-product-page header span{
+    font-size: 1.2rem;
+    font-weight: 600;
+    margin: 0;
+}
+.ask-product-page .ask-product-page__content {
+    font-size: 0;
+    padding: 0 1.5rem;
+}
+.ask-product-page .ask-product-page__content table{
+    border-top: 1px solid black;
+}
+.ask-product-page__content td {
+    border: 0;
+}
+.ask-product-page__content td {
+    font-size: 1rem;
+    border-bottom: 1px solid rgba(0,0,0,0.1);
+    padding: 1rem;
+}
+.ask-product-page__content td:nth-child(2n+1) {
+    width: 25%;
+    border-right: 1px solid rgba(0,0,0,0.1);
+}
+.ask-product-page__content td:nth-child(2n) {
+    width: 75%;
+}
+.ask-product-page__content select {
+    width: 70%;
+    height: 2rem;
+}
+.ask-product-page__content textarea {
+    width: 100%;
+}
+.ask-product-page p {
+    padding: 0 1.5rem;
+    margin: 1.5rem 0;
+}
+.ask-product-page .buttons {
+    justify-content: center!important;
+    gap: 1rem;
+}
+.ask-product-page .buttons button,
+.ask-product-page .buttons input {
+    width: 8rem;
+    cursor: pointer;
+}
+.ask-product-page .buttons input {
+    background: white;
+    color: var(--blue);
+    border: 1px solid var(--blue);
+}
+/*---------------- 상품문의 미니 페이지 끝----------------*/
 .product-detail-ask h3 {
     margin-left: 1rem;
     margin-top: 1rem;
