--- a/src/main/webapp/static/asset/css/pages/product/register.css
+++ b/src/main/webapp/static/asset/css/pages/product/register.css
@@ -10,7 +10,7 @@
     width: 20px;
     height: 20px;
 }
-.product-register-content {
+.pro`duct-register-content {
     width: 100%;
     margin-top: 0.5rem;
 }
