--- a/src/main/webapp/WEB-INF/templates/index.html
+++ b/src/main/webapp/WEB-INF/templates/index.html
@@ -10,6 +10,9 @@
         <div class="index-wrapper">
             <div class="index-wrapper__center">
                 <div class="main-logo-btn" alt="logo" onclick="location.href='/'"></div>
+                <div class="password-changed" th:if="${changePassword eq 'Y'}">
+                    비밀번호가 변경되어, 보안상 고객님의 모든 기기에서 로그아웃 되었습니다
+                </div>
                 <div class="index-wrapper__center__inputs">
                     <div class="email-form">
                         <label for="email" >
