--- a/src/main/webapp/static/asset/css/pages/main.css
+++ b/src/main/webapp/static/asset/css/pages/main.css
@@ -1,4 +1,10 @@
-
+.password-changed {
+    font-size: 0.75rem;
+    border: 1px solid rgba(0,0,0,0.2);
+    background: #fffeed;
+    padding: 1rem;
+    margin-top: 2rem;
+}
 .main-wrapper {
     padding: 0 5rem;
     font-size: 0.8rem;
