--- a/src/main/webapp/WEB-INF/templates/order/list.html
+++ b/src/main/webapp/WEB-INF/templates/order/list.html
@@ -45,7 +45,7 @@
                         </div>
                         <div class="buttons">
                             <input class="orderId" type="hidden" th:value="${order.id}"/>
-                            <button class="white-button js-show-delivery">배송조회</button>
+                            <button class="white-button first-button">배송조회</button>
                             <button class="white-button">교환신청</button>
                             <button class="white-button">반품신청</button>
                             <button class="white-button">구매후기 쓰기</button>
