--- a/src/main/webapp/WEB-INF/templates/product/review.html
+++ b/src/main/webapp/WEB-INF/templates/product/review.html
@@ -12,7 +12,7 @@
 <div class="main-wrapper">
     <div class="mycoupang-wrapper">
         <div class="mycoupang-wrapper__content">
-            <div class="no-result" th:if="${myProduct.isEmpty()}" th:text="'내역이 없습니다.'">
+            <div class="no-result" th:if="${orderProductList.isEmpty()}" th:text="'내역이 없습니다.'">
             </div>
             <div class="mycoupang-wrapper__content__group product-comment" >
                 <h1>구매후기</h1>
@@ -21,42 +21,79 @@
                     <img th:if="${#strings.isEmpty(member.emoticon)}" th:src="@{/static/asset/img/icon/empty-emoticon-icon.png}" alt="emoticon">
                     <span class="member-info__myname" th:text="${member.name}">이름</span>
                 </div>
-                <div class="product-detail-tabs triple-column">
+                <div class="product-detail-tabs review-tabs">
                     <div class="active">작성가능 구매후기</div>
                     <div class="">내가 쓴 구매후기</div>
                     <div class="">쿠팡체험단</div>
                 </div>
+<!--------------------------------작성가능 구매후기 시작-------------------------------->
+                <div class="section-wrapper">
+                    <section class="product" th:each="orderProduct : ${orderProductList}"
+                                             th:if="${#strings.isEmpty(orderProduct.comment) and
+                                                       not #strings.equals(orderProduct.order.status, 'CANCEL')}">
+    <!--                    cancel상태가 아니고, 상품평이 작성된 경우를 제외하면 -->
+                        <div class="product__pic">
+                            <a th:href="${'/product/' + orderProduct.product.id}">
+                                <img th:src="${orderProduct.product.thumbnail}"></img>
+                            </a>
+                        </div>
+                        <div class="product__info product__info-review">
+                            <div>
+                                <img class="price__rocket" th:if="${orderProduct.product.is_rocket eq 'on'}"
+                                      th:src="@{/static/asset/img/rocket_logo.png}"/>
+                                <span th:text="${orderProduct.product.name}"></span>
+                            </div>
+                            <div>
+                                <span th:text="${#dates.format(orderProduct.order.date, 'yyyy.MM.dd') + ' 주문 '}"></span>
+                                ·
+                                <span th:text="${#strings.equals(orderProduct.order.delivery.status, 'READY') ?
+                                                '배송준비' :
+                                                (#strings.equals(orderProduct.order.delivery.status, 'INDELIVERY') ?
+                                                '배송중' :
+                                                '배송완료'
+                                                )}">배송상태</span>
+                            </div>
+                        </div>
+                        <div class="buttons buttons-review">
+                            <input class="orderId" type="hidden" th:value="${orderProduct.id}"/>
+                            <button class="white-button first-button js-write-review">구매후기 쓰기</button>
+                            <button class="white-button">숨기기</button>
+                        </div>
+                    </section>
+<!--------------------------------작성가능 구매후기 끝-------------------------------->
 
-                <section class="product" th:each="orderProduct : ${myProduct}"
-                                         th:if="${not #strings.equals(orderProduct.order.status, 'ORDER')}">
-                    <div class="product__pic">
-                        <a th:href="${'/product/' + orderProduct.product.id}">
-                            <img th:src="${'/' + orderProduct.product.thumbnail}"></img>
-                        </a>
-                    </div>
-                    <div class="product__info product__info-review">
-                        <div>
-                            <img class="price__rocket" th:if="${orderProduct.product.is_rocket eq 'on'}"
-                                  th:src="@{/static/asset/img/rocket_logo.png}"/>
-                            <span th:text="${orderProduct.product.name}"></span>
+<!--------------------------------내가 쓴 구매후기 시작-------------------------------->
+                    <section class="mycomment hidden" th:each="comment : ${comments}"
+                                                      th:if="${comment ne null}">
+                        <div class="mycomment__product-info">
+                            <div class="mycomment__product-info__pic">
+                                <a th:href="${'/product/' + comment.orderProduct.product.id}">
+                                    <img th:src="${comment.orderProduct.product.thumbnail}"></img>
+                                </a>
+                            </div>
+                            <div class="mycomment__product-info__detail">
+                                <img class="price__rocket" th:if="${comment.orderProduct.product.is_rocket eq 'on'}"
+                                     th:src="@{/static/asset/img/rocket_logo.png}"/>
+                                <span class="blue-font" th:text="${comment.orderProduct.product.name}"></span>
+                            </div>
                         </div>
-                        <div>
-                            <span th:text="${#dates.format(orderProduct.order.date, 'yyyy.MM.dd') + ' 주문 '}"></span>
-                            ·
-                            <span th:text="${#strings.equals(orderProduct.order.delivery.status, 'READY') ?
-                                            '배송준비' :
-                                            (#strings.equals(orderProduct.order.delivery.status, 'INDELIVERY') ?
-                                            '배송중' :
-                                            '배송완료'
-                                            )}">배송상태</span>
+                        <div class="mycomment__review">
+                            <div class="mycomment__review__rating js-star-rating">
+                                <span class="hidden" th:text="${comment.stars}"></span>
+                            </div>
+                            <div class="mycomment__review__photo-review">
+                                <img th:src="${comment.photoReview}"/>
+                            </div>
+                            <div class="mycomment__review__short-comment">
+                                <span th:text="${comment.shortComment}"></span>
+                            </div>
+                            <div class="mycomment__review__comment">
+                                <span th:text="${comment.comment}"></span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="buttons buttons-review">
-                        <input class="orderId" type="hidden" th:value="${orderProduct.id}"/>
-                        <button class="white-button js-show-delivery">구매후기 쓰기</button>
-                        <button class="white-button">숨기기</button>
-                    </div>
-                </section>
+                    </section>
+                </div>
+<!--------------------------------내가 쓴 구매후기 끝-------------------------------->
             </div>
         </div>
     </div>
