--- a/src/main/webapp/static/asset/css/pages/order/list.css
+++ b/src/main/webapp/static/asset/css/pages/order/list.css
@@ -120,7 +120,7 @@
     margin: 2%;
     padding: 0;
 }
-.mycoupang-wrapper__content__group .buttons .js-show-delivery {
+.mycoupang-wrapper__content__group .buttons .first-button {
     border: 1px solid #3d82f7;
     color: var(--button-blue);
 }
