--- a/src/main/webapp/static/asset/css/pages/product/review.css
+++ b/src/main/webapp/static/asset/css/pages/product/review.css
@@ -1,3 +1,4 @@
+/*--------------------------------작성가능 구매후기 시작--------------------------------*/
 .mycoupang-wrapper__content__group.product-comment {
     border: 0;
     padding: 0;
@@ -26,6 +27,142 @@
 .buttons-review {
     justify-content: space-evenly!important;
 }
-.product-detail-tabs.triple-column > div{
+.product-detail-tabs.review-tabs > div{
     width: 33.33%;
 }
+/*--------------------------------작성가능 구매후기 끝--------------------------------*/
+
+/*--------------------------------내가 쓴 구매후기 시작--------------------------------*/
+.mycomment {
+    border-bottom: 1px solid rgba(0,0,0,0.4);
+}
+.mycomment__product-info {
+    width: 100%;
+    border-bottom: 1px solid rgba(0,0,0,0.1);
+}
+.mycomment__product-info__pic {
+    height: 4rem;
+    width: 4rem;
+    overflow: hidden;
+    display: inline-block;
+    float: left;
+    padding: 0.5rem;
+}
+.mycomment__product-info__pic img {
+    width: 100%;
+    height: 100%;
+}
+.mycomment__product-info__detail {
+    height: 4rem;
+    width: calc(100% - 6rem);
+    overflow: hidden;
+    display: block;
+    padding: 0.5rem 0;
+    line-height: 3rem;
+}
+.mycomment__product-info__detail .price__rocket {
+    height: 1rem;
+}
+.mycomment__product-info__detail .blue-font {
+    font-size: 1rem;
+}
+.mycomment__review {
+    padding: 0.5rem;
+}
+.mycomment__review__rating,
+.mycomment__review__short-comment,
+.mycomment__review__comment{
+    height: 2rem;
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+}
+.mycomment__review__photo-review {
+    width: 8rem;
+    height: 8rem;
+    overflow: hidden;
+}
+.mycomment__review__photo-review img {
+    width: 8rem;
+    height: 8rem;
+    padding: 0.5rem;
+    object-fit: cover;
+    display: inline-block;
+    border: 1px solid rgba(0,0,0,0.2);
+}
+.mycomment__review__short-comment{
+    font-size: 1rem;
+    font-weight: 600;
+}
+.mycomment__review__comment {
+    font-size: 1rem;
+    font-weight: 500;
+}
+.yellow-star,
+.gray-star{
+    background: url(/static/asset/img/icon/yellow-star-icon.png);
+    width: 18px;
+    height: 18px;
+    background-size: cover;
+    display: inline-block;
+    margin-right: 2px;
+}
+.gray-star {
+    filter: grayscale(1);
+}
+/*--------------------------------내가 쓴 구매후기 끝--------------------------------*/
+
+/*--------------- 별첨. (reviewForm.html용) 제품 리뷰 폼 시작 ---------------*/
+.my-review__header {
+    height: 3.5rem;
+    line-height: 3.5rem;
+    padding-left: 1rem;
+    font-size: 1rem;
+    font-weight: 600;
+    border-top: 1px solid black;
+}
+.product.product-review {
+    margin-bottom: 0;
+    border: 0;
+    border-top: 1px solid rgba(0,0,0,0.2);
+}
+.product-review-form {
+    border-top: 1px solid rgba(0,0,0,0.8);
+}
+.product-review-form td{
+    border: 0;
+    padding: 1rem;
+}
+.product-review-form td:nth-child(2n+1){
+    font-weight: 600;
+    font-size: 1rem;
+    width: 18%;
+}
+.product-review-form td:nth-child(2n){
+    font-size: 0.85rem;
+}
+.product-review-form td textarea,
+.product-review-form td input {
+    width: 100%;
+    padding: 0.5rem;
+    border: 1px solid rgba(0,0,0,0.2);
+    outline: none;
+}
+.product-review-form td textarea{
+    height: 15rem;
+    resize: none;
+}
+
+.product-review-form tr {
+    border-bottom: 1px solid rgba(0,0,0,0.2);
+}
+div.add-photo {
+    width: 8rem;
+    text-align: center;
+}
+.product-review-button {
+    width: 100%;
+    text-align: center;
+    margin-top: 1.5rem;
+    margin-bottom: 3rem;
+}
+/*--------------- 제품 리뷰 폼 끝 ---------------*/
