--- a/src/main/webapp/WEB-INF/templates/product/detail.html
+++ b/src/main/webapp/WEB-INF/templates/product/detail.html
@@ -70,6 +70,33 @@
         <div class="product-detail-comment">
             <button class="blue-button js-comment">상품평 쓰기</button>
             <h3>상품평</h3>
+            <div th:each="orderProduct : ${product.orderProductList}" th:if="${orderProduct.comment ne null}" >
+                <div class="mycomment__review">
+
+                    <div class="mycomment__review__header">
+                        <img class="mycomment__review__header__emoticon"
+                             th:if="${not #strings.isEmpty(orderProduct.order.member.emoticon)}"
+                             th:src="${orderProduct.order.member.emoticon}" alt="emoticon">
+                        <img class="mycomment__review__header__emoticon"
+                             th:if="${#strings.isEmpty(orderProduct.order.member.emoticon)}"
+                             th:src="@{/static/asset/img/icon/empty-emoticon-icon.png}" alt="emoticon">
+                        <span class="member-info__myname" th:text="${orderProduct.order.member.name}">이름</span>
+                        <div class="mycomment__review__rating js-star-rating">
+                            <span class="hidden" th:text="${orderProduct.comment.stars}"></span>
+                        </div>
+                    </div>
+
+                    <div class="mycomment__review__photo-review">
+                        <img th:src="${orderProduct.comment.photoReview}"/>
+                    </div>
+                    <div class="mycomment__review__short-comment">
+                        <span th:text="${orderProduct.comment.shortComment}"></span>
+                    </div>
+                    <div class="mycomment__review__comment">
+                        <span th:text="${orderProduct.comment.comment}"></span>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="shadow-setter hidden"></div>
         <div class="product-detail-ask">
